Update ScenarioInstanceRestService documentation
