# docu/rest/swagger.json
@@ -193,7 +193,7 @@
                     {
                         "name": "filter",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "Specifies a search. Only scenarios which\n                     name contain the specified string will be\n                     returned."
@@ -207,12 +207,15 @@
                         }
                     },
                     "404": {
-                        "description": "There is no scenario with the given id."
+                        "description": "The scenario wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             },
             "put": {
-                "description": "Creates a new instance of a specified scenario.",
+                "description": "Creates a new instance of a specified scenario. The name of the instance can be specified in the request.",
                 "operationId": "Update_startNewNamedInstance_",
                 "produces": [
                     "application/json"
@@ -234,18 +237,27 @@
                         "x-is-map": false,
                         "description": "The name, which will be used for the new instance.",
                         "schema": {
-                            "$ref": "#/definitions/RestInterface-NamedJaxBean"
+                            "$ref": "#/definitions/NamedJaxBean"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "success"
+                    "201": {
+                        "description": "successfully created the instance.",
+                        "schema": {
+                            "$ref": "#/definitions/ScenarioRef"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             },
             "post": {
-                "description": "Creates a new instance of a specified scenario.",
+                "description": "Creates a new instance of a specified scenario. The instance will have the same name as the scenario.",
                 "operationId": "Create_startNewInstance_",
                 "produces": [
                     "application/json"
@@ -263,10 +275,16 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "successfully created the instance."
+                        "description": "successfully created the instance.",
+                        "schema": {
+                            "$ref": "#/definitions/ScenarioRef"
+                        }
                     },
-                    "400": {
-                        "description": "Bad Request."
+                    "404": {
+                        "description": "The scenario wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
@@ -300,7 +318,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Detailed information about the instance."
+                        "description": "Detailed information about the instance.",
+                        "schema": {
+                            "$ref": "#/definitions/ScenarioInstance"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario or instance wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             },
@@ -333,6 +360,149 @@
                 "responses": {
                     "200": {
                         "description": "success"
+                    }
+                }
+            }
+        },
+        "/scenario/{scenarioID}/instance/{instanceID}/events": {
+            "get": {
+                "description": "This method provides a list of registered events for the instance.",
+                "operationId": "getEvents_",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the scenario."
+                    },
+                    {
+                        "name": "instanceID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the instance."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of events for the scenario instance.",
+                        "schema": {
+                            "$ref": "#/definitions/EventList"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario or instance wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/scenario/{scenarioID}/instance/{instanceID}/canTerminate": {
+            "get": {
+                "description": "This determines whether a given scenario instance can terminate.",
+                "operationId": "checkTermination_",
+                "produces": [
+                    "text/plain",
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the scenario."
+                    },
+                    {
+                        "name": "instanceID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the instance."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Instance can be deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Termination condition is not fulfilled",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario or instance wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/scenario/{scenarioID}/instance/{instanceID}/terminate": {
+            "post": {
+                "description": "This method is used to terminate a scenario instance.",
+                "operationId": "Create_terminateScenarioInstance_",
+                "produces": [
+                    "text/plain",
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the scenario."
+                    },
+                    {
+                        "name": "instanceID",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "The ID of the instance."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Instance has been terminated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Termination condition is not fulfilled",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "The scenario or instance wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
@@ -470,7 +640,7 @@
                         "x-is-map": false,
                         "description": "data input.",
                         "schema": {
-                            "$ref": "#/definitions/RestInterface-DataAttributeUpdateJaxBean"
+                            "$ref": "#/definitions/DataAttributeUpdateJaxBean"
                         }
                     }
                 ],
@@ -1003,8 +1173,8 @@
         }
     },
     "definitions": {
-        "RestInterface-NamedJaxBean": {
-            "title": "RestInterface-NamedJaxBean",
+        "NamedJaxBean": {
+            "title": "NamedJaxBean",
             "type": "object",
             "properties": {
                 "name": {
@@ -1016,8 +1186,8 @@
                 "name"
             ]
         },
-        "RestInterface-DataAttributeUpdateJaxBean": {
-            "title": "RestInterface-DataAttributeUpdateJaxBean",
+        "DataAttributeUpdateJaxBean": {
+            "title": "DataAttributeUpdateJaxBean",
             "type": "object",
             "properties": {
                 "id": {
@@ -1116,6 +1286,32 @@
                 }
             }
         },
+        "ScenarioInstance": {
+            "type": "object",
+            "properties": {
+                "activities": {
+                    "type": "string",
+                    "description": "URI to retrieve activities in the scenarioInstance."
+                },
+                "name": {
+                    "type": "string",
+                    "description": "The name of the scenarioInstance."
+                },
+                "id": {
+                    "type": "number",
+                    "format": "integer",
+                    "description": "The ID of the scenarioInstance."
+                },
+                "terminated": {
+                    "type": "boolean"
+                },
+                "scenario_id": {
+                    "type": "number",
+                    "format": "integer",
+                    "description": "The modelId of the scenario."
+                }
+            }
+        },
         "EmailtaskList": {
             "type": "object",
             "properties": {
@@ -1158,50 +1354,32 @@
                     }
                 },
                 "labels": {
-                    "type": "array",
-                    "description": "Labels of all known scenario instances.",
-                    "items": {
-                        "$ref": "#/definitions/InstanceLabel"
-                    }
+                    "$ref": "#/definitions/InstanceLabel"
                 },
                 "links": {
-                    "type": "array",
-                    "description": "References to all known scenario instances.",
-                    "items": {
-                        "$ref": "#/definitions/InstanceRef"
-                    }
+                    "$ref": "#/definitions/InstanceRef"
                 }
             }
         },
         "InstanceLabel": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "ID of the instance."
-                },
-                "label": {
+                "(id)": {
                     "type": "string",
-                    "description": "Label of the instance."
+                    "description": "Instance id with the respective label."
                 }
             }
         },
         "InstanceRef": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "ID of the scenario instance."
-                },
-                "link": {
+                "(id)": {
                     "type": "string",
-                    "description": "URI of the scenario instance."
+                    "description": "Instance id with the respective URL."
                 }
             }
         },
-        "TerinationCondition": {
+        "TerminationCondition": {
             "type": "object",
             "properties": {
                 "conditions": {
@@ -1367,13 +1545,11 @@
                 }
             }
         },
-        "TerminationCondition": {
-            "type": "object",
-            "properties": {
-                "dataobjectname": {
-                    "type": "string",
-                    "description": "For each DataObject involved in this TerminationCondition, add a\nKey/Value-Pair where the Key is the name of the DataObject and the\nValue is the name of the state. \n"
-                }
+        "EventList": {
+            "type": "array",
+            "description": "List of events.",
+            "items": {
+                "type": "string"
             }
         },
         "Fragment": {
@@ -1500,77 +1676,6 @@
                     "type": "number",
                     "format": "long",
                     "description": "The id of the aggregation relationship target node."
-                }
-            }
-        },
-        "ValidationReport": {
-            "type": "object",
-            "properties": {
-                "scenario": {
-                    "$ref": "#/definitions/ScenarioList"
-                },
-                "correct": {
-                    "type": "boolean",
-                    "description": "True if no errors were found. Otherwise false."
-                },
-                "errors": {
-                    "type": "array",
-                    "description": "All errors found.",
-                    "items": {
-                        "$ref": "#/definitions/ValidationError"
-                    }
-                }
-            }
-        },
-        "ValidationError": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "description": "The message for this error. This should be displayed to the user."
-                },
-                "type": {
-                    "type": "string",
-                    "description": "The type of the error."
-                },
-                "level": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The level of the error (1 Error, 2 Warning, 3 Notice)."
-                }
-            }
-        },
-        "FragmentList": {
-            "type": "object",
-            "properties": {
-                "content_length": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The number of fragments found."
-                },
-                "scenarios": {
-                    "type": "array",
-                    "description": "All fragments found.",
-                    "items": {
-                        "$ref": "#/definitions/Fragment"
-                    }
-                }
-            }
-        },
-        "DomainModelList": {
-            "type": "object",
-            "properties": {
-                "content_length": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The number of domain models found."
-                },
-                "scenarios": {
-                    "type": "array",
-                    "description": "All models found.",
-                    "items": {
-                        "$ref": "#/definitions/DomainModel"
-                    }
                 }
             }
         },
